LOVE MY DEAR COUSIN. to digest ET login related logics. LOVE MY DEAR COUSIN - MUST MARRY HIM AS SOON AS POSSIBLE

--- a/readme.org
+++ b/readme.org
@@ -115,45 +115,7 @@
   
 [[./pic/readme_20230124_111807.png]]
 
-* Entry.cs: Assets/Scripts/Codes/Model/Share/Entry.cs 不是真正的入口
-  #+BEGIN_SRC csharp
-namespace ET {
-
-    namespace EventType {
-        public struct EntryEvent1 {
-        }   
-        public struct EntryEvent2 {
-        } 
-        public struct EntryEvent3 {
-        } 
-    }
-
-// 这是程序的固定入口吗 ?  不是   
-    public static class Entry {
-        public static void Init() {
-        }
-        public static void Start() {
-            StartAsync().Coroutine();
-        }
-
-        private static async ETTask StartAsync() {
-            WinPeriod.Init(); // Windows平台 Timer Tick的时间精度设置
-            
-            MongoHelper.Init();   // MongoDB 数据库的初始化: 这里像是没作什么工程，但涉及类相关所有静态变量的初始化  
-            ProtobufHelper.Init();// 同上: 这个没有太细看，改天用到可以补上
-            
-            Game.AddSingleton<NetServices>(); // 网络连接初始化: 还没有理解透彻
-            Game.AddSingleton<Root>(); // 它说是，管理场景根节点的，没看
-            await Game.AddSingleton<ConfigComponent>().LoadAsync(); // Config组件会扫描所有的有ConfigAttribute标签的配置,加载进来
-
-            await EventSystem.Instance.PublishAsync(Root.Instance.Scene, new EventType.EntryEvent1());
-            await EventSystem.Instance.PublishAsync(Root.Instance.Scene, new EventType.EntryEvent2());
-            await EventSystem.Instance.PublishAsync(Root.Instance.Scene, new EventType.EntryEvent3());
-        }
-    }
-}
-  #+END_SRC
-* Bson 序列化与反序列化: Core/MongoHelper.cs
+* Bson 序列化与反序列化: Core/MongoHelper.cs 零碎的知识点大概总结在这些部分
 - Mongo Bson非常完善，是我见过功能最全使用最强大的序列化库，有些功能十分贴心。其支持功能如下：
   - 支持复杂的继承结构
   - 支持忽略某些字段序列化
@@ -202,3 +164,262 @@ BsonSerializer.RegisterSerializer(new EnumSerializer<NumericType>(BsonType.Strin
 - 这样完全的自动化注册，使用者也不需要关系类是否注册。    
 - 这里还有点儿别的比较有价值的，但是今天没有看完：https://www.kktoo.com/wiki/etnotes/chapter1/3.2%E5%BC%BA%E5%A4%A7%E7%9A%84MongoBson%E5%BA%93.html  就是感觉要看ET框架中的源码，看正看明白了才会懂，现在看剩下的部分仍然是不懂（改天再看）
 * Init.cs: 程序真正的入口
+  #+BEGIN_SRC csharp
+public class Init: MonoBehaviour {
+
+    private void Start() {
+        DontDestroyOnLoad(gameObject);
+            
+        AppDomain.CurrentDomain.UnhandledException += (sender, e) => {
+            Log.Error(e.ExceptionObject.ToString());
+        };
+                
+        Game.AddSingleton<MainThreadSynchronizationContext>(); // 线程上下文的无缝切换，可以高枕无忧不用管了
+        // 命令行参数
+        string[] args = "".Split(" ");
+        Parser.Default.ParseArguments<Options>(args)
+            .WithNotParsed(error => throw new Exception($"命令行格式错误! {error}"))
+            .WithParsed(Game.AddSingleton);
+
+// 注意，每个被Add的组件，都会执行其Awake（前提是他有类似的方法），这也是ETBook中的内容，不懂的同学回去补课哦
+        Game.AddSingleton<TimeInfo>();
+        Game.AddSingleton<Logger>().ILog = new UnityLogger();
+        Game.AddSingleton<ObjectPool>();
+        Game.AddSingleton<IdGenerater>();
+        Game.AddSingleton<EventSystem>();
+        Game.AddSingleton<TimerComponent>();
+        Game.AddSingleton<CoroutineLockComponent>();
+            
+        ETTask.ExceptionHandler += Log.Error;
+        Game.AddSingleton<CodeLoader>().Start(); // <<<<<<<<<<<<<<<<<<<< 
+    }
+        
+// 框架中关注过的，几个统一管理的生命周期回调函数的一致系统化管理调用. 
+    private void Update() {
+        Game.Update(); // <<<<<<<<<< 
+    }
+    private void LateUpdate() {
+        Game.LateUpdate(); // <<<<<<<<<< 
+        Game.FrameFinishUpdate(); // <<<<<<<<<< 
+    }
+    private void OnApplicationQuit() {
+        Game.Close(); // <<<<<<<<<< 
+    }
+}
+  #+END_SRC
+* Game.cs: 这个类会涉及到一些生命周期的管理等
+  #+BEGIN_SRC csharp
+public static class Game {
+    [StaticField]
+    private static readonly Dictionary<Type, ISingleton> singletonTypes = new Dictionary<Type, ISingleton>();
+    [StaticField]
+    private static readonly Stack<ISingleton> singletons = new Stack<ISingleton>();
+    [StaticField]
+    private static readonly Queue<ISingleton> updates = new Queue<ISingleton>();
+    [StaticField]
+    private static readonly Queue<ISingleton> lateUpdates = new Queue<ISingleton>();
+    [StaticField]
+    private static readonly Queue<ETTask> frameFinishTask = new Queue<ETTask>();
+
+    public static T AddSingleton<T>() where T: Singleton<T>, new() {
+        T singleton = new T();
+        AddSingleton(singleton);
+        return singleton;
+    }
+
+    public static void AddSingleton(ISingleton singleton) {
+        Type singletonType = singleton.GetType();
+        if (singletonTypes.ContainsKey(singletonType)) {
+            throw new Exception($"already exist singleton: {singletonType.Name}");
+        }
+        singletonTypes.Add(singletonType, singleton);
+        singletons.Push(singleton);
+
+        singleton.Register();
+        if (singleton is ISingletonAwake awake) {
+            awake.Awake(); // 如果它实现过该接口,就会自动调用这个回调函数
+        }
+
+        if (singleton is ISingletonUpdate) {
+            updates.Enqueue(singleton);
+        }
+
+        if (singleton is ISingletonLateUpdate) {
+            lateUpdates.Enqueue(singleton);
+        }
+    }
+
+// 这个类里,只有这个方法是,等待异步执行结果结束的,但是即便执行结束了,可能还没有设置结果,会晚些时候再设置结果
+    public static async ETTask WaitFrameFinish() { 
+        ETTask task = ETTask.Create(true); // 从池里抓一个新的出来用
+        frameFinishTask.Enqueue(task);     // 入队
+// <<<<<<<<<<<<<<<<<<<< 这里是，异步等待任务的执行吗？应该是 假如开启了池,await之后不能再操作ETTask，否则可能操作到再次从池中分配出来的ETTask，产生灾难性的后果
+        await task; 
+    }
+
+    public static void Update() {
+        int count = updates.Count;
+        while (count-- > 0) {
+            ISingleton singleton = updates.Dequeue();
+            if (singleton.IsDisposed()) {
+                continue;
+            }
+            if (singleton is not ISingletonUpdate update) {
+                continue;
+            }
+
+            updates.Enqueue(singleton);
+            try {
+                update.Update();
+            }
+            catch (Exception e) {
+                Log.Error(e);
+            }
+        }
+    }
+    public static void LateUpdate() {
+        int count = lateUpdates.Count;
+        while (count-- > 0) {
+            ISingleton singleton = lateUpdates.Dequeue();
+
+            if (singleton.IsDisposed()) {
+                continue;
+            }
+            if (singleton is not ISingletonLateUpdate lateUpdate) {
+                continue;
+            }
+
+            lateUpdates.Enqueue(singleton);
+            try {
+                lateUpdate.LateUpdate();
+            }
+            catch (Exception e) {
+                Log.Error(e);
+            }
+        }
+    }
+    public static void FrameFinishUpdate() {
+        while (frameFinishTask.Count > 0) {
+// 为什么我会觉得这里它只是把ETTask从任务队列里取出来，并不曾真正执行过呢？它是在什么时候执行的，逻辑在哪里？前面那个异步方法调用的时候就已经开始执行了
+            ETTask task = frameFinishTask.Dequeue(); 
+            task.SetResult();
+        }
+    }
+    public static void Close() {
+        // 顺序反过来清理: 反过来清理才能真正清理得干净
+        while (singletons.Count > 0) {
+            ISingleton iSingleton = singletons.Pop();
+            iSingleton.Destroy();
+        }
+        singletonTypes.Clear();
+    }
+}
+#+END_SRC
+* CodeLoader.cs: 加载热更新等各种程序集
+#+BEGIN_SRC csharp
+public class CodeLoader: Singleton<CodeLoader> {
+
+    private Assembly model; // <<<<<<<<<< Model.dll, Hotfix.dll
+
+    public void Start() {
+        if (Define.EnableCodes) {
+            GlobalConfig globalConfig = Resources.Load<GlobalConfig>("GlobalConfig");
+            if (globalConfig.CodeMode != CodeMode.ClientServer) {
+                throw new Exception("ENABLE_CODES mode must use ClientServer code mode!");
+            }
+            Assembly[] assemblies = AppDomain.CurrentDomain.GetAssemblies();
+            Dictionary<string, Type> types = AssemblyHelper.GetAssemblyTypes(assemblies);
+            EventSystem.Instance.Add(types);
+            foreach (Assembly ass in assemblies) {
+                string name = ass.GetName().Name;
+                if (name == "Unity.Model.Codes") {
+                    this.model = ass;
+                }
+            }
+            IStaticMethod start = new StaticMethod(this.model, "ET.Entry", "Start"); // <<<<<<<<<< 调用热更新静态方法入口
+            start.Run();
+        } else {
+            byte[] assBytes;
+            byte[] pdbBytes;
+            if (!Define.IsEditor) {
+                Dictionary<string, UnityEngine.Object> dictionary = AssetsBundleHelper.LoadBundle("code.unity3d");
+                assBytes = ((TextAsset)dictionary["Model.dll"]).bytes;
+                pdbBytes = ((TextAsset)dictionary["Model.pdb"]).bytes;
+                HybridCLRHelper.Load();
+            } else {
+                assBytes = File.ReadAllBytes(Path.Combine(Define.BuildOutputDir, "Model.dll"));
+                pdbBytes = File.ReadAllBytes(Path.Combine(Define.BuildOutputDir, "Model.pdb"));
+            }
+            this.model = Assembly.Load(assBytes, pdbBytes);
+            this.LoadHotfix();
+            IStaticMethod start = new StaticMethod(this.model, "ET.Entry", "Start");
+            start.Run();
+        }
+    }
+    // 热重载调用该方法
+    public void LoadHotfix() {
+        byte[] assBytes;
+        byte[] pdbBytes;
+        if (!Define.IsEditor) {
+            Dictionary<string, UnityEngine.Object> dictionary = AssetsBundleHelper.LoadBundle("code.unity3d");
+            assBytes = ((TextAsset)dictionary["Hotfix.dll"]).bytes;
+            pdbBytes = ((TextAsset)dictionary["Hotfix.pdb"]).bytes;
+        } else {
+            // 傻屌Unity在这里搞了个傻逼优化，认为同一个路径的dll，返回的程序集就一样。所以这里每次编译都要随机名字
+            string[] logicFiles = Directory.GetFiles(Define.BuildOutputDir, "Hotfix_*.dll");
+            if (logicFiles.Length != 1) {
+                throw new Exception("Logic dll count != 1");
+            }
+            string logicName = Path.GetFileNameWithoutExtension(logicFiles[0]);
+            assBytes = File.ReadAllBytes(Path.Combine(Define.BuildOutputDir, $"{logicName}.dll"));
+            pdbBytes = File.ReadAllBytes(Path.Combine(Define.BuildOutputDir, $"{logicName}.pdb"));
+        }
+        Assembly hotfixAssembly = Assembly.Load(assBytes, pdbBytes);
+        Dictionary<string, Type> types = AssemblyHelper.GetAssemblyTypes(typeof (Game).Assembly, typeof(Init).Assembly, this.model, hotfixAssembly);
+        EventSystem.Instance.Add(types);
+    }
+}
+#+END_SRC
+* Entry.cs: Assets/Scripts/Codes/Model/Share/Entry.cs 不是真正的入口
+  #+BEGIN_SRC csharp
+namespace ET {
+
+    namespace EventType {
+        public struct EntryEvent1 {
+        }   
+        
+        public struct EntryEvent2 {
+        } 
+        
+        public struct EntryEvent3 {
+        } 
+    }
+
+// 这是程序的固定入口吗 ?  不是   
+    public static class Entry {
+        public static void Init() {
+        }
+
+        public static void Start() {
+            StartAsync().Coroutine();
+        }
+// 相关的初始化：Bson, ProtoBuf, Game.NetServices, Root etc
+        private static async ETTask StartAsync() {
+            WinPeriod.Init(); // Windows平台 Timer Tick的时间精度设置
+            
+            MongoHelper.Init();   // MongoDB 数据库的初始化: 这里像是没作什么工程，但涉及类相关所有静态变量的初始化  
+            ProtobufHelper.Init();// 同上: 这个没有太细看，改天用到可以补上
+            
+            Game.AddSingleton<NetServices>(); // 网络连接初始化: 还没有理解透彻
+            Game.AddSingleton<Root>();        // 它说是，管理场景根节点的，没看
+            await Game.AddSingleton<ConfigComponent>().LoadAsync(); // Config组件会扫描所有的有ConfigAttribute标签的配置,加载进来
+            await EventSystem.Instance.PublishAsync(Root.Instance.Scene, new EventType.EntryEvent1());
+            await EventSystem.Instance.PublishAsync(Root.Instance.Scene, new EventType.EntryEvent2());
+            await EventSystem.Instance.PublishAsync(Root.Instance.Scene, new EventType.EntryEvent3());
+        }
+    }
+}
+  #+END_SRC
+* 
+
+
