--- a/readme.tex
+++ b/readme.tex
@@ -1,4 +1,4 @@
-% Created 2023-01-24 Tue 10:40
+% Created 2023-01-24 Tue 19:12
 \documentclass[9pt, b5paper]{article}
 \usepackage{xeCJK}
 \usepackage{minted}
@@ -41,7 +41,7 @@
 \item 这个框架相对比较平民化比较亲民，文档相对健全，关键模块和知识点讲解得相对透彻完善，更关键的是使用的人可能会比较多。自己遇到问题的时候能够网络上寻求的帮助来源多一点儿。会主要参考这个来搭写自己的框架
 \end{itemize}
 
-\section{帐户服 + 数据库 + 登录中心服 + 网关服: 具体设计逻辑相关实现源码学习}
+\section{帐户服 + 数据库 + 登录中心服 + 网关服: 具体设计林框架参考}
 \label{sec-3}
 \begin{itemize}
 \item 下面主要记录别人站在相对比较高的角度总结出来的架构：\url{https://blog.csdn.net/Q540670228/article/details/123592622}
@@ -187,5 +187,338 @@
 \begin{itemize}
 \item ​顶号逻辑属于是账号系统较为复杂的逻辑，其主要用到了中心登录服务器暂存玩家当前状态，并创建了Player和Unit映射对象，通过Player暂存到网关中实现顶号逻辑 可以无需重新创建Player和Unit直接更新属性复用，大大提高了顶号的效率。
 \end{itemize}
+
+\section{帐户服 + 数据库 + 登录中心服 + 网关服: 具体设计逻辑相关实现源码学习}
+\label{sec-4}
+\begin{itemize}
+\item 上面是别人总结出来的大框架, 现在看仍是如云里雾里.项目是可以运行起来,并有demo小项目可以参考的
+\item 可以根据上面的步骤与日志,把运行过程中的游戏端(ServerClient模式)游戏热更新Model.dll Hotfix.dll的源码看懂,弄明白这个框架是如何实现登录相关,以及必要的游戏逻辑服务器热更新的(如果有多余时间的话),应该就会对这个框架有相对更好的理解,可以考虑开始适配自己的简单服务器
+\item 可以比较两种不同的启动模式有什么不同?
+\item 先去找游戏客户端里,程序的入口是在哪里,逻辑如何连贯起来的? 因为项目比较大,看一次不曾自己真正实现过,狠容易就看一次忘记一次,所以记好笔记狠重要
+\item MangoDB 数据库的连接,要把这个配置好,才能真正理解这个框架与范例
+\end{itemize}
+
+\includegraphics[width=.9\linewidth]{./pic/readme_20230124_111807.png}
+
+\section{Bson 序列化与反序列化: Core/MongoHelper.cs}
+\label{sec-5}
+\begin{itemize}
+\item Mongo Bson非常完善，是我见过功能最全使用最强大的序列化库，有些功能十分贴心。其支持功能如下：
+\begin{itemize}
+\item 支持复杂的继承结构
+\item 支持忽略某些字段序列化
+\item 支持字段默认值
+\item 结构多出多余的字段照样可以反序列化，这对多版本协议非常有用
+\item 支持ISupportInitialize接口使用，这个在反序列化的时候简直就是神器
+\item 支持文本json和二进制bson序列化
+\item MongoDB数据库支持
+\end{itemize}
+\item 这里看一个关于反序列化时的继承关系所涉及到的点:
+\item 支持复杂的继承结构
+\item mongo bson库强大的地方在于完全支持序列化反序列化继承结构。需要注意的是， \textbf{继承反序列化需要注册所有的父类} ，有两种方法：
+\item a. 你可以在父类上面使用[BsonKnownTypes]标签声明继承的子类，这样mongo会自动注册，例如:
+\end{itemize}
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+    [BsonKnownTypes(typeof(Entity))]
+    public class Component
+    {
+    }
+    [BsonKnownTypes(typeof(Player))]
+    public class Entity: Component
+    {
+    }
+    public sealed class Player: Entity
+    {
+        public long Id;
+
+        public string Account { get; set; }
+
+        public long UnitId { get; set; }
+    }
+\end{minted}
+\begin{itemize}
+\item 这样有缺陷，因为框架并不知道一个类会有哪些子类， \textbf{这样做对框架代码有侵入性，我们希望能解除这个耦合 。}
+\item b. 可以扫描程序集中所有子类父类的类型，将他们注册到mongo驱动中
+\end{itemize}
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+Type[] types = typeof(Game).Assembly.GetTypes();
+foreach (Type type in types)
+{
+    if (!type.IsSubclassOf(typeof(Component)))
+    {
+        continue;
+    }
+
+    BsonClassMap.LookupClassMap(type); // <<<<<<<<<<<<<<<<<<<< 
+}
+BsonSerializer.RegisterSerializer(new EnumSerializer<NumericType>(BsonType.String));
+\end{minted}
+\begin{itemize}
+\item 这样完全的自动化注册，使用者也不需要关系类是否注册。
+\item 这里还有点儿别的比较有价值的，但是今天没有看完：\url{https://www.kktoo.com/wiki/etnotes/chapter1/3.2\%E5\%BC\%BA\%E5\%A4\%A7\%E7\%9A\%84MongoBson\%E5\%BA\%93.html}  就是感觉要看ET框架中的源码，看正看明白了才会懂，现在看剩下的部分仍然是不懂（改天再看）
+\end{itemize}
+\section{Init.cs: 程序真正的入口}
+\label{sec-6}
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+public class Init: MonoBehaviour {
+
+    private void Start() {
+        DontDestroyOnLoad(gameObject);
+            
+        AppDomain.CurrentDomain.UnhandledException += (sender, e) => {
+            Log.Error(e.ExceptionObject.ToString());
+        };
+                
+        Game.AddSingleton<MainThreadSynchronizationContext>(); // 线程上下文的无缝切换，可以高枕无忧不用管了
+        // 命令行参数
+        string[] args = "".Split(" ");
+        Parser.Default.ParseArguments<Options>(args)
+            .WithNotParsed(error => throw new Exception($"命令行格式错误! {error}"))
+            .WithParsed(Game.AddSingleton);
+
+// 注意，每个被Add的组件，都会执行其Awake（前提是他有类似的方法），这也是ETBook中的内容，不懂的同学回去补课哦
+        Game.AddSingleton<TimeInfo>();
+        Game.AddSingleton<Logger>().ILog = new UnityLogger();
+        Game.AddSingleton<ObjectPool>();
+        Game.AddSingleton<IdGenerater>();
+        Game.AddSingleton<EventSystem>();
+        Game.AddSingleton<TimerComponent>();
+        Game.AddSingleton<CoroutineLockComponent>();
+            
+        ETTask.ExceptionHandler += Log.Error;
+        Game.AddSingleton<CodeLoader>().Start(); // <<<<<<<<<<<<<<<<<<<< 
+    }
+        
+// 框架中关注过的，几个统一管理的生命周期回调函数的一致系统化管理调用. 
+    private void Update() {
+        Game.Update(); // <<<<<<<<<< 
+    }
+    private void LateUpdate() {
+        Game.LateUpdate(); // <<<<<<<<<< 
+        Game.FrameFinishUpdate(); // <<<<<<<<<< 
+    }
+    private void OnApplicationQuit() {
+        Game.Close(); // <<<<<<<<<< 
+    }
+}
+\end{minted}
+\section{Game.cs: 这个类会涉及到一些生命周期的管理等}
+\label{sec-7}
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+public static class Game {
+    [StaticField]
+    private static readonly Dictionary<Type, ISingleton> singletonTypes = new Dictionary<Type, ISingleton>();
+    [StaticField]
+    private static readonly Stack<ISingleton> singletons = new Stack<ISingleton>();
+    [StaticField]
+    private static readonly Queue<ISingleton> updates = new Queue<ISingleton>();
+    [StaticField]
+    private static readonly Queue<ISingleton> lateUpdates = new Queue<ISingleton>();
+    [StaticField]
+    private static readonly Queue<ETTask> frameFinishTask = new Queue<ETTask>();
+
+    public static T AddSingleton<T>() where T: Singleton<T>, new() {
+        T singleton = new T();
+        AddSingleton(singleton);
+        return singleton;
+    }
+
+    public static void AddSingleton(ISingleton singleton) {
+        Type singletonType = singleton.GetType();
+        if (singletonTypes.ContainsKey(singletonType)) {
+            throw new Exception($"already exist singleton: {singletonType.Name}");
+        }
+        singletonTypes.Add(singletonType, singleton);
+        singletons.Push(singleton);
+
+        singleton.Register();
+        if (singleton is ISingletonAwake awake) {
+            awake.Awake(); // 如果它实现过该接口,就会自动调用这个回调函数
+        }
+
+        if (singleton is ISingletonUpdate) {
+            updates.Enqueue(singleton);
+        }
+
+        if (singleton is ISingletonLateUpdate) {
+            lateUpdates.Enqueue(singleton);
+        }
+    }
+
+// 这个类里,只有这个方法是,等待异步执行结果结束的,但是即便执行结束了,可能还没有设置结果,会晚些时候再设置结果
+    public static async ETTask WaitFrameFinish() { 
+        ETTask task = ETTask.Create(true); // 从池里抓一个新的出来用
+        frameFinishTask.Enqueue(task);     // 入队
+// <<<<<<<<<<<<<<<<<<<< 这里是，异步等待任务的执行吗？应该是 假如开启了池,await之后不能再操作ETTask，否则可能操作到再次从池中分配出来的ETTask，产生灾难性的后果
+        await task; 
+    }
+
+    public static void Update() {
+        int count = updates.Count;
+        while (count-- > 0) {
+            ISingleton singleton = updates.Dequeue();
+            if (singleton.IsDisposed()) {
+                continue;
+            }
+            if (singleton is not ISingletonUpdate update) {
+                continue;
+            }
+
+            updates.Enqueue(singleton);
+            try {
+                update.Update();
+            }
+            catch (Exception e) {
+                Log.Error(e);
+            }
+        }
+    }
+    public static void LateUpdate() {
+        int count = lateUpdates.Count;
+        while (count-- > 0) {
+            ISingleton singleton = lateUpdates.Dequeue();
+
+            if (singleton.IsDisposed()) {
+                continue;
+            }
+            if (singleton is not ISingletonLateUpdate lateUpdate) {
+                continue;
+            }
+
+            lateUpdates.Enqueue(singleton);
+            try {
+                lateUpdate.LateUpdate();
+            }
+            catch (Exception e) {
+                Log.Error(e);
+            }
+        }
+    }
+    public static void FrameFinishUpdate() {
+        while (frameFinishTask.Count > 0) {
+// 为什么我会觉得这里它只是把ETTask从任务队列里取出来，并不曾真正执行过呢？它是在什么时候执行的，逻辑在哪里？前面那个异步方法调用的时候就已经开始执行了
+            ETTask task = frameFinishTask.Dequeue(); 
+            task.SetResult();
+        }
+    }
+    public static void Close() {
+        // 顺序反过来清理: 反过来清理才能真正清理得干净
+        while (singletons.Count > 0) {
+            ISingleton iSingleton = singletons.Pop();
+            iSingleton.Destroy();
+        }
+        singletonTypes.Clear();
+    }
+}
+\end{minted}
+\section{CodeLoader.cs: 加载热更新等各种程序集}
+\label{sec-8}
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+public class CodeLoader: Singleton<CodeLoader> {
+
+    private Assembly model; // <<<<<<<<<< Model.dll, Hotfix.dll
+
+    public void Start() {
+        if (Define.EnableCodes) {
+            GlobalConfig globalConfig = Resources.Load<GlobalConfig>("GlobalConfig");
+            if (globalConfig.CodeMode != CodeMode.ClientServer) {
+                throw new Exception("ENABLE_CODES mode must use ClientServer code mode!");
+            }
+            Assembly[] assemblies = AppDomain.CurrentDomain.GetAssemblies();
+            Dictionary<string, Type> types = AssemblyHelper.GetAssemblyTypes(assemblies);
+            EventSystem.Instance.Add(types);
+            foreach (Assembly ass in assemblies) {
+                string name = ass.GetName().Name;
+                if (name == "Unity.Model.Codes") {
+                    this.model = ass;
+                }
+            }
+            IStaticMethod start = new StaticMethod(this.model, "ET.Entry", "Start"); // <<<<<<<<<< 调用热更新静态方法入口
+            start.Run();
+        } else {
+            byte[] assBytes;
+            byte[] pdbBytes;
+            if (!Define.IsEditor) {
+                Dictionary<string, UnityEngine.Object> dictionary = AssetsBundleHelper.LoadBundle("code.unity3d");
+                assBytes = ((TextAsset)dictionary["Model.dll"]).bytes;
+                pdbBytes = ((TextAsset)dictionary["Model.pdb"]).bytes;
+                HybridCLRHelper.Load();
+            } else {
+                assBytes = File.ReadAllBytes(Path.Combine(Define.BuildOutputDir, "Model.dll"));
+                pdbBytes = File.ReadAllBytes(Path.Combine(Define.BuildOutputDir, "Model.pdb"));
+            }
+            this.model = Assembly.Load(assBytes, pdbBytes);
+            this.LoadHotfix();
+            IStaticMethod start = new StaticMethod(this.model, "ET.Entry", "Start");
+            start.Run();
+        }
+    }
+    // 热重载调用该方法
+    public void LoadHotfix() {
+        byte[] assBytes;
+        byte[] pdbBytes;
+        if (!Define.IsEditor) {
+            Dictionary<string, UnityEngine.Object> dictionary = AssetsBundleHelper.LoadBundle("code.unity3d");
+            assBytes = ((TextAsset)dictionary["Hotfix.dll"]).bytes;
+            pdbBytes = ((TextAsset)dictionary["Hotfix.pdb"]).bytes;
+        } else {
+            // 傻屌Unity在这里搞了个傻逼优化，认为同一个路径的dll，返回的程序集就一样。所以这里每次编译都要随机名字
+            string[] logicFiles = Directory.GetFiles(Define.BuildOutputDir, "Hotfix_*.dll");
+            if (logicFiles.Length != 1) {
+                throw new Exception("Logic dll count != 1");
+            }
+            string logicName = Path.GetFileNameWithoutExtension(logicFiles[0]);
+            assBytes = File.ReadAllBytes(Path.Combine(Define.BuildOutputDir, $"{logicName}.dll"));
+            pdbBytes = File.ReadAllBytes(Path.Combine(Define.BuildOutputDir, $"{logicName}.pdb"));
+        }
+        Assembly hotfixAssembly = Assembly.Load(assBytes, pdbBytes);
+        Dictionary<string, Type> types = AssemblyHelper.GetAssemblyTypes(typeof (Game).Assembly, typeof(Init).Assembly, this.model, hotfixAssembly);
+        EventSystem.Instance.Add(types);
+    }
+}
+\end{minted}
+\section{Entry.cs: Assets/Scripts/Codes/Model/Share/Entry.cs 不是真正的入口}
+\label{sec-9}
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+namespace ET {
+
+    namespace EventType {
+        public struct EntryEvent1 {
+        }   
+        
+        public struct EntryEvent2 {
+        } 
+        
+        public struct EntryEvent3 {
+        } 
+    }
+
+// 这是程序的固定入口吗 ?  不是   
+    public static class Entry {
+        public static void Init() {
+        }
+
+        public static void Start() {
+            StartAsync().Coroutine();
+        }
+// 相关的初始化：Bson, ProtoBuf, Game.NetServices, Root etc
+        private static async ETTask StartAsync() {
+            WinPeriod.Init(); // Windows平台 Timer Tick的时间精度设置
+            
+            MongoHelper.Init();   // MongoDB 数据库的初始化: 这里像是没作什么工程，但涉及类相关所有静态变量的初始化  
+            ProtobufHelper.Init();// 同上: 这个没有太细看，改天用到可以补上
+            
+            Game.AddSingleton<NetServices>(); // 网络连接初始化: 还没有理解透彻
+            Game.AddSingleton<Root>();        // 它说是，管理场景根节点的，没看
+            await Game.AddSingleton<ConfigComponent>().LoadAsync(); // Config组件会扫描所有的有ConfigAttribute标签的配置,加载进来
+            await EventSystem.Instance.PublishAsync(Root.Instance.Scene, new EventType.EntryEvent1());
+            await EventSystem.Instance.PublishAsync(Root.Instance.Scene, new EventType.EntryEvent2());
+            await EventSystem.Instance.PublishAsync(Root.Instance.Scene, new EventType.EntryEvent3());
+        }
+    }
+}
+\end{minted}
+\section{}
+\label{sec-10}
 % Emacs 27.2 (Org mode 8.2.7c)
 \end{document}
