LOVE MY DEAR COUSIN. ET Unity HotfixView part. LOVE MY DEAR COUSIN - MUST MARRY HIM AS SOON AS POSSIBLE

--- a/readme.org
+++ b/readme.org
@@ -163,10 +163,37 @@ BsonSerializer.RegisterSerializer(new EnumSerializer<NumericType>(BsonType.Strin
 #+END_SRC
 - 这样完全的自动化注册，使用者也不需要关系类是否注册。    
 - 这里还有点儿别的比较有价值的，但是今天没有看完：https://www.kktoo.com/wiki/etnotes/chapter1/3.2%E5%BC%BA%E5%A4%A7%E7%9A%84MongoBson%E5%BA%93.html  就是感觉要看ET框架中的源码，看正看明白了才会懂，现在看剩下的部分仍然是不懂（改天再看）
+* 后面消息处理的部分大致逻辑：《参考网上的：可对对照源码，把它不懂的也解惑了。。。》
+- 在消息处理这方面，它的逻辑是这样的，
+- https://blog.csdn.net/qq_33574890/article/details/128244264?spm=1001.2101.3001.6650.3&utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7EYuanLiJiHua%7EPosition-3-128244264-blog-88990234.pc_relevant_aa2&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7EYuanLiJiHua%7EPosition-3-128244264-blog-88990234.pc_relevant_aa2&utm_relevant_index=4 大家最开始也都同我一样，一知半解的，总有个熟悉的过程
+- [与自己项目的本区别：] 自己的不是网络游戏，手游移动端，不是实现游戏模型逻辑的部分热更新，而是游戏的全部逻辑除了游戏入口在正常游戏程序域，其它都可以都全部放入了热更新程序域。所以自己的热更新并不涉及任何游戏过程逻辑与游戏逻辑服的交互，简化了无限多的大型网络游戏的逻辑模型热更新的步骤。下面ET框架更多的是用于大型网游的吧。。。。。
+- 在点击进入地图的按钮之后他会发送一个消息到服务器，服务器会发送一个玩家ID回来(这些都是，游戏过程中，一个客户端与游戏逻辑服的《实时？异步］交互)
+- 这个玩家ID就是客户端的唯一标识
+- 在收到服务器的回复消息时，再发送一个创建Unit的内部消息
+- 这个内部消息的处理者会创建这个Unit并进行广播，为什么要广播，不是很懂》［不是要适配大型多人网络游戏吗，不广播新的玩家进来了，其它玩家如何知晓呢］？为什么不用事件而要用内部消息也很奇怪《事件系统可以区分不同玩家吗？消息机制可以跨进程，可以这个玩家发给同区不同区其它玩家跟发短信一样，广播消息都都用actor消息机制吗？为什么要用事件系统，事件系统定义了玩家生成，玩家步移，玩家跳动跑动，玩家打架，玩家失血，玩家挂掉了吗？本质上讲应该似乎两种都可以，但消息机制可能更为简单广泛通用？》？
+- 在创建Unit的时候在他身上挂载了寻路组件和移动组件(如果是事件系统，就只有玩家生成，与玩家移动两个事件了吗？最主要的，事件系统是否定义了关于玩家这些逻辑的所有相关功能模块？没有，上面就是消息机制最为简单)。
+- 而游戏场景里面有一个OperaCompoent，这个组件会实时监听按键的点击并且将点击的位置发送给服务器，服务器再传送回客户端
+- 这边也挺奇怪的，[不奇怪，实现的是功能逻辑的元件组件化，可装载可卸载，相对更容易理解与精减维护源码]
+- 客户端这边接收ClickMapActor消息后解析位置，调用unit的Path组件进行移动。大体流程就是这样。
+- 但其实这样很不连贯，我发送一个消息，应该await等待获得消息，然后再做处理，这样就弄的 *很分散不够集中*[这个是说得很精准，以致于我现在入口加载都找上几十个文件弱弱拎不清楚。。。。。]
+
+* 事件处理
+- ET的所有逻辑全部用事件来处理了
+- 这带来一个坏处，就是没办法高内聚。《为什么要高内聚呢？本来目的出发点就是要低内聚，减少功能模块逻辑的偶合decoupling呀》
+- 本来属于一个业务模型里面的逻辑，通过事件分散到了两到三个脚本里面。增加了阅读难度和上下连贯性。《这是如亲爱的表哥眼中的弱弱活宝妹般，小弱弱们读大型多人网络游戏框架的必经之痛，都得有这个过程》
+- 单纯举例来说，游戏初始化后发送了InitScenFinish事件。
+- UI处理模块接收到事件创建UI物体并显示
+- 在各个UI单独的组件比如LoginCom和LobbyCom里面进行UI逻辑撰写即并绑定事件
+- 他把本属于Model层的代码全部写进了静态类Helper里面来调用。《是这样吗？？？》
+- 也就是说View层直接调用了Model层代码。其实这样就强耦合了。《以小人之心度君子之腹，明明你自己也承认是帮助类，帮助类就不该是模型逻辑层？!在如亲爱的表哥眼中的活宝妹般弱弱的年代，这类错误概念设计上的理解，都是小弱弱们的辛酸泪，成长的代价。。。。。爱表哥，爱生活!!!》
+- 直接调用MapHelper
+- 上面就当从网络上搜来的梗概提要，等自己读源码的时候对照来理解，修正补确
 * BuildModelAndHotfix: 一定要构建生成热更新程序集，项目狠大，两个程序集的内容没能消化好
   
 [[./pic/readme_20230125_103303.png]]
 - 它有几种不同的启动模式，可以再具体区分一下
+- 这里面有好多个项目,也要区分哪些是可以热更新,哪些是不能够热更新的,
+  - 没细看源码,竟然不知道, Unity.Model里面的代码不能热更新，通常将游戏中不会变动的部分放在这个项目里
 - 下面是根据范例加载过程的追踪来理解这么多个工程。自己项目的热更新等程序集都能弄懂并解决所有的问题。但是这个项目太大，感觉现在仍然有点儿无从下口的状态。。。。。
 * Init.cs: 程序真正的入口
   #+BEGIN_SRC csharp
@@ -702,29 +729,6 @@ public partial class StartProcessConfig {
 }
 #+END_SRC
 - 不知道今天上午用VSC出什么问题，程序跑不通了，等再关几个窗口，重新运行得通的时候才可以再追踪日志，先等等
-
-* 后面消息处理的部分大致逻辑：《参考网上的：可对对照源码，把它不懂的也解惑了。。。》
-- 在消息处理这方面，它的逻辑是这样的，
-- https://blog.csdn.net/qq_33574890/article/details/128244264?spm=1001.2101.3001.6650.3&utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7EYuanLiJiHua%7EPosition-3-128244264-blog-88990234.pc_relevant_aa2&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7EYuanLiJiHua%7EPosition-3-128244264-blog-88990234.pc_relevant_aa2&utm_relevant_index=4 大家最开始也都同我一样，一知半解的，总有个熟悉的过程
-- [与自己项目的本区别：] 自己的不是网络游戏，手游移动端，不是实现游戏模型逻辑的部分热更新，而是游戏的全部逻辑除了游戏入口在正常游戏程序域，其它都可以都全部放入了热更新程序域。所以自己的热更新并不涉及任何游戏过程逻辑与游戏逻辑服的交互，简化了无限多的大型网络游戏的逻辑模型热更新的步骤。下面ET框架更多的是用于大型网游的吧。。。。。
-- 在点击进入地图的按钮之后他会发送一个消息到服务器，服务器会发送一个玩家ID回来(这些都是，游戏过程中，一个客户端与游戏逻辑服的《实时？异步］交互)
-- 这个玩家ID就是客户端的唯一标识
-- 在收到服务器的回复消息时，再发送一个创建Unit的内部消息
-- 这个内部消息的处理者会创建这个Unit并进行广播，为什么要广播，不是很懂》［不是要适配大型多人网络游戏吗，不广播新的玩家进来了，其它玩家如何知晓呢］？为什么不用事件而要用内部消息也很奇怪《事件系统可以区分不同玩家吗？消息机制可以跨进程，可以这个玩家发给同区不同区其它玩家跟发短信一样，广播消息都都用actor消息机制吗？为什么要用事件系统，事件系统定义了玩家生成，玩家步移，玩家跳动跑动，玩家打架，玩家失血，玩家挂掉了吗？本质上讲应该似乎两种都可以，但消息机制可能更为简单广泛通用？》？
-- 在创建Unit的时候在他身上挂载了寻路组件和移动组件(如果是事件系统，就只有玩家生成，与玩家移动两个事件了吗？最主要的，事件系统是否定义了关于玩家这些逻辑的所有相关功能模块？没有，上面就是消息机制最为简单)。
-- 而游戏场景里面有一个OperaCompoent，这个组件会实时监听按键的点击并且将点击的位置发送给服务器，服务器再传送回客户端
-- 这边也挺奇怪的，[不奇怪，实现的是功能逻辑的元件组件化，可装载可卸载，相对更容易理解与精减维护源码]
-- 客户端这边接收ClickMapActor消息后解析位置，调用unit的Path组件进行移动。大体流程就是这样。
-- 但其实这样很不连贯，我发送一个消息，应该await等待获得消息，然后再做处理，这样就弄的 *很分散不够集中*[这个是说得很精准，以致于我现在入口加载都找上几十个文件弱弱拎不清楚。。。。。]
-
-* 事件处理
-- ET的所有逻辑全部用事件来处理了
-- 这带来一个坏处，就是没办法高内聚。《为什么要高内聚呢？本来目的出发点就是要低内聚，减少功能模块逻辑的偶合decoupling呀》
-- 本来属于一个业务模型里面的逻辑，通过事件分散到了两到三个脚本里面。增加了阅读难度和上下连贯性。《这是如亲爱的表哥眼中的弱弱活宝妹般，小弱弱们读大型多人网络游戏框架的必经之痛，都得有这个过程》
-- 单纯举例来说，游戏初始化后发送了InitScenFinish事件。
-- UI处理模块接收到事件创建UI物体并显示
-- 在各个UI单独的组件比如LoginCom和LobbyCom里面进行UI逻辑撰写即并绑定事件
-- 他把本属于Model层的代码全部写进了静态类Helper里面来调用。《是这样吗？？？》
-- 也就是说View层直接调用了Model层代码。其实这样就强耦合了。《以小人之心度君子之腹，明明你自己也承认是帮助类，帮助类就不该是模型逻辑层？!在如亲爱的表哥眼中的活宝妹般弱弱的年代，这类错误概念设计上的理解，都是小弱弱们的辛酸泪，成长的代价。。。。。爱表哥，爱生活!!!》
-- 直接调用MapHelper
-- 上面就当从网络上搜来的梗概提要，等自己读源码的时候对照来理解，修正补确
+- 它有几个模式：好像要有一个一一对应，就是一个服务器，一个客户端，大致的意思是说，同在游戏引擎里，不能一次弄出两三个客户端之类的吧（就是要么clientserver模式，要么server + client, 别弄了个servier,结果又构建了个clientserver）这样程序就可以正常运行了
+- 感觉那么追日志看得好艰难，跟不上.就先把游戏中需要打包构建的几个主要的程序自己先理解一遍，不懂的上网查，再跟着日志看。现在看感觉仍然不知道在哪里
+* HotfixView程序域: 先看这部分,这里面的大部分的源码都还比较简单
